--- a/ng1/src/app/shared/shell/shell.component.html
+++ b/ng1/src/app/shared/shell/shell.component.html
@@ -6,7 +6,9 @@
           <mat-toolbar>Menu</mat-toolbar>
           <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="drawer.close()">Home</a>
-            <a mat-list-item routerLink="/login" (click)="drawer.close()">Login</a>
+            <a mat-list-item routerLink="/chart1" (click)="drawer.close()">Chart 1</a>
+            <a mat-list-item routerLink="/chart2" (click)="drawer.close()">Chart 2</a>
+            <a mat-list-item routerLink="/chart3" (click)="drawer.close()">Chart 3</a>
           </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
