fixing bugs: minor typos

--- a/ng1/src/app/line-chart/line-chart.component.html
+++ b/ng1/src/app/line-chart/line-chart.component.html
@@ -26,8 +26,8 @@
     <button mat-button mat-raised-button color="primary" (click)="pushOne()">Next Sesions (10 mins later)</button>
     <!-- <button mat-button mat-raised-button color="primary" (click)="changeColor()">Recolor</button> -->
     <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle kWh Used</button>
-    <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle CO2 Saved</button>
-    <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle US$ Cost</button>
+    <button mat-button mat-raised-button color="primary" (click)="hideTwo()">Toggle CO2 Saved</button>
+    <button mat-button mat-raised-button color="primary" (click)="hideThree()">Toggle US$ Cost</button>
     <!-- <button mat-button mat-raised-button color="primary" (click)="changeLabel()">Change Label</button> -->
   </div>
 </div>
