adding bar char with nav

--- a/ng1/src/app/shared/shell/shell.component.html
+++ b/ng1/src/app/shared/shell/shell.component.html
@@ -9,6 +9,7 @@
             <a mat-list-item routerLink="/chart1" (click)="drawer.close()">Chart 1</a>
             <a mat-list-item routerLink="/chart2" (click)="drawer.close()">Chart 2</a>
             <a mat-list-item routerLink="/chart3" (click)="drawer.close()">Chart 3</a>
+            <a mat-list-item routerLink="/chart4" (click)="drawer.close()">Chart 4</a>
           </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
