added chart4 stacked bars

--- a/ng1/src/app/bar-chart/bar-chart.component.html
+++ b/ng1/src/app/bar-chart/bar-chart.component.html
@@ -8,3 +8,15 @@
     [chartType]="barChartType">
   </canvas>
 </div>
+
+
+<ul>
+  <li>This chart loads session data by sequence, most recent on right</li>
+  <li>The BAR shape shows energy usage by session is labeled by color</li>
+  <li>GREEN represents charge not in use by minutes and percentage. Label is left side. </li>
+  <li>GREY represents charge in use by minutes and percentage. Label is left side. </li>
+  <li>The line shape shows amount charged by sessions is labeled by blue color  </li>
+  <li>Tips</li>
+  <li>When both bar and line shapes are zero, a session started and NO energy was charged and amount charged.</li>
+  <li>When bar shapes are NOT zero and line is zero, a session started and engery was charged and amount was not charged. </li>
+</ul>
