--- a/ng1/src/app/footer/footer.component.html
+++ b/ng1/src/app/footer/footer.component.html
@@ -1,1 +1,32 @@
 <p>footer works!</p>
+
+
+<!-- <h3>Raised Buttons</h3>
+<div class="example-button-row">
+  <button mat-raised-button>Basic</button>
+  <button mat-raised-button color="primary">Primary</button>
+  <button mat-raised-button color="accent">Accent</button>
+  <button mat-raised-button color="warn">Warn</button>
+  <button mat-raised-button disabled>Disabled</button>
+  <a mat-raised-button routerLink=".">Link</a>
+</div> -->
+
+<!-- 
+  <div class="flex-item">
+    <table class="table table-responsive table-condensed">
+      <tr>
+        <th *ngFor="let label of lineChartLabels">{{label}}</th>
+      </tr>
+      <tr *ngFor="let d of lineChartData; let i=index" [class]="'line-'+i">
+        <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
+      </tr>
+    </table>
+
+
+    <button mat-button mat-raised-button color="primary" (click)="pushOne()">Next Sesions (10 mins later)</button>
+
+    <button mat-button mat-raised-button color="primary" (click)="hideOne()">Toggle kWh Used</button>
+    <button mat-button mat-raised-button color="primary" (click)="hideTwo()">Toggle CO2 Saved</button>
+    <button mat-button mat-raised-button color="primary" (click)="hideThree()">Toggle US$ Cost</button>
+
+  </div> -->
