--- a/ng1/src/app/polar-chart/polar-chart.component.html
+++ b/ng1/src/app/polar-chart/polar-chart.component.html
@@ -1,4 +1,4 @@
-<h1>data sessions1 </h1>
+<h1>When is the most energy being used? </h1>
 <div style="display: block;">
   <canvas baseChart
     [data]="polarAreaChartData"
