--- a/ng1/src/app/shared/shell/shell.component.html
+++ b/ng1/src/app/shared/shell/shell.component.html
@@ -6,14 +6,15 @@
           <mat-toolbar>Menu</mat-toolbar>
           <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="drawer.close()">Home</a>
-            <a mat-list-item routerLink="/chart1" (click)="drawer.close()">Chart 1</a>
-            <a mat-list-item routerLink="/chart2" (click)="drawer.close()">Chart 2</a>
-            <a mat-list-item routerLink="/chart3" (click)="drawer.close()">Chart 3</a>
-            <a mat-list-item routerLink="/chart4" (click)="drawer.close()">Chart 4</a>
+            <!-- <a mat-list-item routerLink="/chart1" (click)="drawer.close()">Chart 1</a> -->
+            <a mat-list-item routerLink="/chart2" (click)="drawer.close()">Health</a>
+            <a mat-list-item routerLink="/chart3" (click)="drawer.close()">Power</a>
+            <a mat-list-item routerLink="/chart4" (click)="drawer.close()">Utilization</a>
           </mat-nav-list>
         </mat-sidenav>
-        <mat-sidenav-content>
-          <mat-toolbar color="primary">
+
+        <mat-sidenav-content >
+          <mat-toolbar (click)="drawer.toggle()" color="primary">
             <button
               type="button"
               aria-label="Toggle sidenav"
@@ -22,7 +23,7 @@
               *ngIf="isHandset$ | async">
               <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span (click)="drawer.toggle()" class="logo" routerLink="/" >EV Fast Charge Dashboard</span>
+            <span class="logo" routerLink="/" >EV Fast Charge Dashboard</span>
       
             <span class="fill-space"></span>
             <div *ngIf="!(isHandset$ | async)">
