--- a/ng1/src/app/shared/shell/shell.component.html
+++ b/ng1/src/app/shared/shell/shell.component.html
@@ -3,7 +3,7 @@
             [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
             [mode]="(isHandset$ | async) ? 'over' : 'side'"
             [opened]="(isHandset$ | async) === false">
-          <mat-toolbar>Menu</mat-toolbar>
+          <mat-toolbar>Nav</mat-toolbar>
           <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="drawer.close()">Home</a>
             <!-- <a mat-list-item routerLink="/chart1" (click)="drawer.close()">Chart 1</a> -->
